force-app/main/default/objects/EFTPOS_User__c/EFTPOS_User__c.object-meta.xml
<CustomObject>
    <description>This Objects is inteded to store the Multi-Mid Merchant relationship Owner - User.</description>
    <label>EFTPOS User</label>
    <nameField>
        <displayFormat>EFTPOS User - {0000000000}</displayFormat>
        <label>EFTPOS User ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EFTPOS Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>