force-app/main/default/objects/EFTPOS_User__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>User Business Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>