force-app/main/default/objects/EFTPOS_User__c/fields/EFTPOS_Device_Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Device_Owner_Account__c</fullName>
    <description>Device Owner Account</description>
    <inlineHelpText>Device Owner Account</inlineHelpText>
    <label>EFTPOS Device Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EFTPOS Users</relationshipLabel>
    <relationshipName>EFTPOS_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>