force-app/main/default/objects/EFTPOS_User__c/fields/EFTPOS_Device_Owner_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Device_Owner_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EFTPOS Device Owner Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>EFTPOS Users (EFTPOS Device Owner Opportunity)</relationshipLabel>
    <relationshipName>EFTPOS_Users</relationshipName>
    <type>Lookup</type>
</CustomField>