force-app/main/default/objects/EFTPOS_User__c/fields/EFTPOS_Device_User_Account__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Device_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EFTPOS Device User Account reference</description>
    <label>EFTPOS Device User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EFTPOS Device Owner Account</relationshipLabel>
    <relationshipName>EFTPOS_Device_User_Account</relationshipName>
    <type>Lookup</type>
</CustomField>