force-app/main/default/objects/EFTPOS_User__c/fields/EFTPOS_Device_User_Lead__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Device_User_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related EFTPOS User Lead</description>
    <label>EFTPOS Device User Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>EFTPOS Device User Lead</relationshipLabel>
    <relationshipName>EFTPOS_Device_User_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>