force-app/main/default/objects/EFTPOS_User__c/fields/EFTPOS_Device_User_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Device_User_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related EFTPOS User Opportunity</description>
    <label>EFTPOS Device User Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>EFTPOS Device User Opportunity</relationshipLabel>
    <relationshipName>EFTPOS_Device_User_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>