force-app/main/default/objects/EFTPOS_User__c/fields/Prefill_User_CSA__c.field-meta.xml
<CustomField>
    <fullName>Prefill_User_CSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures choice of EFTPOS Device Owners to Prefill the EFTPOS Users CSAs in Multi MID(Merchant) solution</description>
    <inlineHelpText>EFTPOS Device Owner - Prefills User CSA</inlineHelpText>
    <label>Prefill User CSA</label>
    <type>Checkbox</type>
</CustomField>