force-app/main/default/objects/EFTPOS_User__c/fields/Signup_ID__c.field-meta.xml
<CustomField>
    <fullName>Signup_ID__c</fullName>
    <description>Unique ID to represent the CSA concealing the underlying OPP and CSA IDs, Used in Multi MID(Multi Merchant Journey)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique ID to represent the CSA concealing the underlying OPP and CSA IDs</inlineHelpText>
    <label>Signup ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>